--- a/docs/zheader/formatter/zheader-formatter.css
+++ b/docs/zheader/formatter/zheader-formatter.css
@@ -10,11 +10,13 @@
 .code {
 	font-family: "Source Code Pro", Consolas, monospace;
 	font-size: 1.4em;
+	white-space: pre;
 }
 
 .infoCode {
 	font-family: "Source Code Pro", Consolas, monospace;
 	font-size: 1.1em;
+	white-space: pre;
 }
 
 .error {
