--- a/docs/zheader/formatter/zheader-formatter.css
+++ b/docs/zheader/formatter/zheader-formatter.css
@@ -1,6 +1,6 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
 
 .info {
@@ -8,13 +8,13 @@
 }
 
 .code {
-	font-family: "Source Code Pro", Consolas, monospace;
+	font-family: "IBM Plex Mono", Consolas, monospace;
 	font-size: 1.4em;
 	white-space: pre;
 }
 
 .infoCode {
-	font-family: "Source Code Pro", Consolas, monospace;
+	font-family: "IBM Plex Mono", Consolas, monospace;
 	font-size: 1.1em;
 	white-space: pre;
 }
