--- a/docs/ex-hl.css
+++ b/docs/ex-hl.css
@@ -1,10 +1,7 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
-
-
 .code {
-	font-family: "IBM Plex Mono", Consolas, monospace;
+	font-family: var(--font-monospace), monospace;
 }
 
 .hl {
@@ -17,7 +14,7 @@
 }
 
 .inline-code {
-	font-family: "IBM Plex Mono", Consolas, monospace;
+	font-family: var(--font-monospace), monospace;
 	background: #eee;
     padding: 0 0.2em;
 }
@@ -25,14 +22,4 @@
 .selected {
 	background: #eeffee;
 }
-
-/*
-.sticky {
-	position: sticky;
-	top: 0;
-	background: white;
-	border: 1px solid #eee;
-	padding: 0 0.5em;
-}
-*/
 
